...
  "hijab-niqab": require("../../../assets/illustrations/hijab-niqab.jpg"),
  "hijab-burqa": require("../../../assets/illustrations/hijab-burqa.jpg"),
  "sparkle-plain": require("../../../assets/illustrations/sparkle-plain.jpg"),
  "sparkle-little": require("../../../assets/illustrations/sparkle-little.jpg"),
  "sparkle-heavy": require("../../../assets/illustrations/sparkle-heavy.jpg"),
  "sparkle-bridal": require("../../../assets/illustrations/sparkle-bridal.jpg"),
  "hijab-always": require("../../../assets/illustrations/hijab-always.jpg"),
  "hijab-sometimes": require("../../../assets/illustrations/hijab-sometimes.jpg"),
  "hijab-no": require("../../../assets/illustrations/hijab-no.jpg"),
  "coverage-full-bare": require("../../../assets/illustrations/coverage-full-bare.jpg"),
  "coverage-moderate-bare": require("../../../assets/illustrations/coverage-moderate-bare.jpg"),
  "coverage-relaxed-bare": require("../../../assets/illustrations/coverage-relaxed-bare.jpg"),
  "style-western-bare": require("../../../assets/illustrations/style-western-bare.jpg"),
...
